2013-01-28  Stefan Monnier  <monnier@iro.umontreal.ca>

	* hi-lock.el (hi-lock-unface-buffer): Don't assume `face' is a symbol
	(bug#13297).

2013-01-27  Dmitry Gutov  <dgutov@yandex.ru>

	* progmodes/ruby-mode.el (ruby-font-lock-keywords): Remove some
	checks made superfluous by the \_< operator.
	* progmodes/ruby-mode.el (ruby-move-to-block): Work with (maybe
	temporarily) broken indentation.
	* progmodes/ruby-mode.el (ruby-font-lock-keywords):
	Highlight nested constants, too.  \_< broke that.

2013-01-27  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* progmodes/ruby-mode.el (ruby-font-lock-keywords): Use "\\_<"
	instead of "\\b".

2013-01-27  Michael Albinus  <michael.albinus@gmx.de>

	* autorevert.el (auto-revert-handler): Notifications which result
	from a saved file shall not be taken into account.  (Bug#13557)

2013-01-26  Andreas Schwab  <schwab@linux-m68k.org>

	* emacs-lisp/lisp-mode.el (lisp-mode-variables): Add optional
	parameter BAR-NOT-SYMBOL to control syntax of | for font-lock.
	(lisp-mode): Pass t for it.  (Bug#13556)

2013-01-25  Alan Mackenzie  <acm@muc.de>

	AWK Mode: Fix indentation bug at top level.  Bug #12274.

	* progmodes/cc-engine.el (c-guess-basic-syntax): Move CASE 5P to
	just before CASE 5D.

2013-01-25  Dmitry Antipov  <dmantipov@yandex.ru>

	* net/socks.el (socks-nslookup-host): Use string-to-number.

2013-01-25  Michael Albinus  <michael.albinus@gmx.de>

	* autorevert.el (auto-revert-remote-files)
	(auto-revert-notify-exclude-dir-regexp): New defcustoms.
	(auto-revert-notify-enabled, auto-revert-use-notify)
	(auto-revert-notify-watch-descriptor-hash-list)
	(auto-revert-notify-modified-p, auto-revert-notify-event-p)
	(auto-revert-notify-event-descriptor)
	(auto-revert-notify-event-action)
	(auto-revert-notify-event-file-name): Doc fix.
	(global-auto-revert-mode): Reorder checks.
	(auto-revert-notify-rm-watch): Respect changed values of
	`auto-revert-notify-watch-descriptor-hash-list'.
	(auto-revert-notify-add-watch): Check for