@@ -1,3 +1,11 @@
+2013-01-29  Michael Albinus  <michael.albinus@gmx.de>
+
+	* net/ange-ftp.el (ange-ftp-skip-msgs): Add another message.
+
+	* net/tramp-sh.el (tramp-sh-handle-start-file-process): Catch
+	`suppress'.  Otherwise, `tramp-run-real-handler' might be called
+	in `tramp-file-name-handler'.
+
 2013-01-28  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* hi-lock.el (hi-lock-unface-buffer): Don't assume `face' is a symbol
